<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="250dp"
    tools:context=".LoadoutActivity">

    <ImageView
        android:id="@+id/imgLoadoutBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/title_image_desc"
        android:maxHeight="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/zombies_city2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loadoutDescriptionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/loadout_directions"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/vivid_red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentHighScoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/loadout_current_high_score"
        android:textAlignment="center"
        android:textColor="@color/vivid_red"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gearImage" />

    <TextView
        android:id="@+id/loadoutHighScoreView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/permanent_marker"
        android:text="0"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/vivid_red"
        app:layout_constraintEnd_toEndOf="@+id/currentHighScoreView"
        app:layout_constraintStart_toStartOf="@+id/currentHighScoreView"
        app:layout_constraintTop_toBottomOf="@+id/currentHighScoreView" />

    <Button
        android:id="@+id/playButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/brass"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/loadout_play_button"
        android:textAlignment="center"
        android:textColor="@color/eerie_black"
        app:layout_constraintEnd_toEndOf="@+id/highScoresButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/highScoresButton"
        app:layout_constraintTop_toBottomOf="@+id/loadoutHighScoreView" />

    <Button
        android:id="@+id/highScoresButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:background="@color/brass"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/loadout_high_scores_button"
        android:textAlignment="center"
        android:textColor="@color/eerie_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <ImageView
        android:id="@+id/gearImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/desc_gear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadoutDescriptionView"
        app:srcCompat="@drawable/ic_handgun" />

</android.support.constraint.ConstraintLayout>